--- a/graphql_tester/backend/package.json
+++ b/graphql_tester/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend",
+  "name": "qraphql_tester",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,12 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-express": "^2.18.2",
-    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-graphql": "^0.11.0",
-    "graphql": "^15.3.0",
-    "websocket": "^1.0.32",
-    "ws": "^7.3.1"
+    "graphql": "^15.3.0"
   }
 }
